fixed css issue on mobile

--- a/src/styles/header+navbar.css
+++ b/src/styles/header+navbar.css
@@ -365,7 +365,7 @@
   .search-btn {
     display: none;
     width: 2.2em !important;
-    padding-right: 2em;
+    padding-right: 2.3em;
   }
 
   .search-input:not(:placeholder-shown) {
